fix style.css z-index

--- a/R/Rintro/style.css
+++ b/R/Rintro/style.css
@@ -27,6 +27,7 @@
 
   /* TOC inspired by http://jashkenas.github.com/coffee-script */
   #table-of-contents {
+    z-index: 10;
     font-size: 10pt;
     position: fixed;
     right: 0em;
@@ -215,6 +216,7 @@
   /*  } */
 
   pre {
+    z-index: -1;
     font-family: Monaco, Consolas, "Lucida Console", monospace;
     color: black;
     background-color: #efefef;
